# nano-embeddings

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
datasets/xpqa/: README.md  prepare_xpqa.py
datasets/xpqa_ko_strategyqa/: README.md  metadata.json  xpqa_dataset.py
dense_embeddings/: finetune.py  mps_cached_multiple_negatives_ranking_loss.py
nanoembeddings/: __init__.py  cli.py
sparse_embeddings/: __init__.py  esci.py  finetune.py
