[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoembeddings"
version = "0.1.0"
description = "Dense and sparse embedding training recipes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.2.0",
    "trackio>=0.13.0",
    "transformers>=4.41.0",
]

[project.scripts]
nanoembeddings = "nanoembeddings.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nanoembeddings", "dense_embeddings", "sparse_embeddings"]
